fix: add already exist validation